--- a/src/main/webapp/css/popup.css
+++ b/src/main/webapp/css/popup.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
@@ -60,13 +59,13 @@ button:hover {
   justify-content: flex-start;
   gap: 15px;
   margin: 0 0;
-  padding: 0; /* 불필요한 내부 여백 제거 */
+  padding: 0;
 }
 .bookmark-add-form form {
   display: flex;
   align-items: center;
   gap: 10px;
-  margin: 0; /* 폼 자체 여백 제거 */
+  margin: 0;
 }
 .bookmark-add-form label {
   font-size: 1rem;
